# fibonacci

./: .gitignore  Cargo.toml  README.md
.cargo/: config.toml
benches/: criterion.rs
src/: lib.rs  main.rs
