[package]
name = "fibonacci"
version = "0.1.0"
authors = ["Maarten Van Coile <maarten.vancoile@me.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4", features = ["derive"] }
num-bigint = "0.4"
num-traits = "0.2"

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "criterion"
harness = false
