[package]
name = "fibonacci"
version = "0.2.0"
authors = ["Maarten Van Coile <maarten.vancoile@me.com>"]
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5", features = ["derive"] }
malachite = { version = "0.5", features = ["naturals_and_integers"] }

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "criterion"
harness = false
